--- a/rs/templates/user_main_helpers/menubar.html
+++ b/rs/templates/user_main_helpers/menubar.html
@@ -85,80 +85,7 @@
                 </ul>
             </li>
 
-            <li class="top">
-                <a href="#" class="top_link">
-                    <span class="down">{% trans "Contacts" %}
-                    {% if primary_user_presentation_data_fields.new_contact_count_sum %}
-                        [{{ primary_user_presentation_data_fields.new_contact_count_sum }} {% trans "new" %}]
-                    {% endif %}
-                    </span>
-                </a>
-                <ul class="sub">
-                    <li>
-                        <a href="#nogo29" class="fly">Winks
-                        {% if primary_user_presentation_data_fields.new_contact_counter_obj.num_received_wink_since_last_reset %}
-                        [{{ primary_user_presentation_data_fields.new_contact_counter_obj.num_received_wink_since_last_reset }} {% trans "new" %}]
-                        {% endif %}
-                        </a>
-                        <ul class="sub">
-                            <li><a href="{% url show_contacts contact_type='wink' sent_or_received='received' %}">Received
-                            [{{ primary_user_presentation_data_fields.new_contact_counter_obj.num_received_wink_since_last_reset }} {% trans "new" %}]
-                            </a></li>
-                            <li><a href="{% url show_contacts contact_type='wink' sent_or_received='sent' %}">Sent</a></li>
-
-                        </ul>
-                    </li>
-
-			        <li>
-                        <a href="#" class="fly">Kisses
-                        {% if primary_user_presentation_data_fields.new_contact_counter_obj.num_received_kiss_since_last_reset %}
-                        [{{ primary_user_presentation_data_fields.new_contact_counter_obj.num_received_kiss_since_last_reset }} {% trans "new" %}]
-                        {% endif %}
-                        </a>
-                        <ul class="sub">
-                            <li><a href="{% url show_contacts contact_type='kiss' sent_or_received='received' %}">Received
-                                [{{ primary_user_presentation_data_fields.new_contact_counter_obj.num_received_kiss_since_last_reset }} {% trans "new" %}]
-                            </a></li>
-                            <li><a href="{% url show_contacts contact_type='kiss' sent_or_received='sent' %}">Sent</a></li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="#" class="fly">Keys
-                        {% if primary_user_presentation_data_fields.new_contact_counter_obj.num_received_key_since_last_reset %}
-                        [{{ primary_user_presentation_data_fields.new_contact_counter_obj.num_received_key_since_last_reset }} {% trans "new" %}]
-                        {% endif %}
-                        </a>
-                        <ul class="sub">
-                            <li><a href="{% url show_contacts contact_type='key' sent_or_received='received' %}">Received
-                                [{{ primary_user_presentation_data_fields.new_contact_counter_obj.num_received_key_since_last_reset }} {% trans "new" %}]
-                            </a></li>
-                            <li><a href="{% url show_contacts contact_type='key' sent_or_received='sent' %}">Sent</a></li>
-                        </ul>
-                    </li>
-
-
-                    <li>
-                        <a href="#" class="fly">Chat Friends</a>
-                        <ul class="sub">
-                            <li><a href="#">Requests Received</a></li>
-                            <li><a href="#">Requests Sent</a></li>
-                            <li><a href="#">Confirmed Friends</a></li>
-
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Favorite Profiles</a>
-                    </li>
-
-                    <li>
-                        <a href="#">Blocked Profiles</a>
-                    </li>
-
-
-
-                </ul>
-            </li>
+            {{ primary_user_presentation_data_fields.contacts_dropdown_html|safe }}
     
             <li class="top">
                 <a href="{% url show_profile_views %}" class="top_link">
@@ -170,17 +97,6 @@
                 </a>
             </li>
 
-    
-            <li class="top">
-                <a href="{% url generate_contacts_display owner_uid=primary_user_presentation_data_fields.owner_uid %}"
-                class="top_link">
-                    <span>{% trans "Contacts" %}
-                    {% if primary_user_presentation_data_fields.new_contact_count_sum %}
-                        [{{ primary_user_presentation_data_fields.new_contact_count_sum }} {% trans "new" %}]
-                    {% endif %}
-                    </span>
-                </a>
-            </li>
 
             {% if SHOW_VIP_UPGRADE_OPTION %}
                 <li class="top">
