Display relevant icon on each of the "contacts" pages (ie. a kiss, wink, etc.)
Re-named some of the "chat_friend" fields in InitiateContactCount to be more consistent with other data field names. This propagated through a lot of code, and has the potential to have introduced errors.

--- a/rs/static/css/site_common.css
+++ b/rs/static/css/site_common.css
@@ -176,6 +176,10 @@ select {
 .cl-text-10pt-format {font-size: 10px;}
 .cl-text-8pt-format {font-size: 8px;}
 
+.cl-vertical-align-middle {
+    vertical-align: middle;
+}
+
 .cl-header-format {
 font-size: 18px;
 font-weight: bold;
