--- a/rs/static/css/Menubar_common.css
+++ b/rs/static/css/Menubar_common.css
@@ -13,7 +13,7 @@ way to fit your requirements.
 
 
 /* We use the "Single Image Sliding Doors" technique to allow us to use a single button image when the mouse is hovered hover a menu item. 
- * I haven't fully investigated this technique, but it seems that the span item overlays the right side of the image, over the default 
+ * I haven't fully investigated this technique - the span item overlays the right side of the image, over the default 
  * background which contains the left side of the image.
  */
 
@@ -28,27 +28,16 @@ way to fit your requirements.
 
 
 /* Default list styling */
-/*#rs-nav li:hover {position:relative; z-index:200;}*/
-/*#rs-nav .cl-top_item {position: relative; z-index:200;}*/
 
-/*#rs-nav li:hover ul.sub*/
 #rs-nav li .cl-show_sub
 {left:1px; top:24px; padding:3px; border-width: 0px 2px 2px 2px; border-style: solid; white-space:nowrap; width:180px; height:auto; z-index:300;}
-/*#rs-nav li:hover ul.sub li*/
+
 #rs-nav li .cl-show_sub li
 {display:block; height:20px;  float:left; width:180px; font-weight:normal;}
-/*#rs-nav li:hover ul.sub li a*/
+
 #rs-nav li .cl-show_sub li a
 {display:block; font-size:13px; height:18px; width:178px; line-height:18px; text-indent:5px; text-decoration:none; }
 
-
-
-/*
-#rs-nav li:hover li:hover ul,
-#rs-nav li:hover li:hover li:hover ul,
-#rs-nav li:hover li:hover li:hover li:hover ul,
-#rs-nav li:hover li:hover li:hover li:hover li:hover ul
-*/
 #rs-nav li ul.cl-show_sub ul.cl-show_sub
 {left:180px; top:-4px; padding:3px; white-space:nowrap; width:180px; z-index:400; height:auto;}
 
