More fixes related to FriendBazaar

--- a/rs/templates/user_main_helpers/main_body.html
+++ b/rs/templates/user_main_helpers/main_body.html
@@ -277,7 +277,7 @@
 
     <div class="cl-clear"></div>
     <div class="grid_9 alpha omega cl-left-text cl-text-large-format">
-        <strong>{% blocktrans %}Activities that I am interested in and/or that I would "sell" my time for{% endblocktrans %}
+        <strong>{% blocktrans %}Activities that I am interested in{% endblocktrans %}
             {% if primary_user_profile_data_fields.is_primary_user %}
                 {% blocktrans with primary_user_profile_data_fields.max_checkbox_values_in_combined_ix_list as num %}(a maximum of {{ num }} activities may be selected){% endblocktrans %}
             {% endif %}
