--- a/rs/templates/user_main_helpers/main_body.html
+++ b/rs/templates/user_main_helpers/main_body.html
@@ -222,10 +222,11 @@
 
 <!-- create a div that will be used to hang the dialog box off. This will only be shown when the user trys to send a message
      to someone without having already entered sufficient information about themselves.-->
-<div id="id-about_user_is_empty_popup" style="display:none;">
-    {{ viewed_profile_data_fields.about_user_dialog_popup|safe }}
+<div class="grid_9 cl-prefix_40px alpha omega">
+    <div id="id-about_user_is_empty_popup" style="display:none;">
+        {{ viewed_profile_data_fields.about_user_dialog_popup|safe }}
+    </div>
 </div>
-
 
 <div class="grid_9 alpha omega">
     <!-- this is just a dummy spacer -->
