Added code to make user generated text (such as their profile, or a message) to display as the user has entered it by using simple css, as opposed to the previous version which directly searched for characters and replaced them with html.

--- a/rs/static/css/site_common.css
+++ b/rs/static/css/site_common.css
@@ -419,3 +419,8 @@ table.cl-float-right {
 li.cl-indent {
     margin-left: 25px;
 }
+
+.cl-literally-display-user-text {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
