Worked on "send_message" functionality. Reduced captcha reloading when user tries to send an empty message.

--- a/rs/templates/common_wrapper.html
+++ b/rs/templates/common_wrapper.html
@@ -109,6 +109,7 @@
     <!-- Google Analytics -->
 
     {% include "common_helpers/analytics.html" %}
+    {% include "common_helpers/common_translations.html" %}
 
 
 
