--- a/rs/templates/user_main_helpers/vip_benefits.html
+++ b/rs/templates/user_main_helpers/vip_benefits.html
@@ -9,8 +9,10 @@
         <li>{% blocktrans with NUMER_OF_DAYS_PROFILE_VIEWS_STORED as days and  app_name as app_name %}
             You will see all of the other {{ app_name }} members that have viewed your profile over the past {{ days }} days. 
             {% endblocktrans %}</li>
-        <li>{% blocktrans with num_chat_friends_for_free_clients as free and  num_chat_friends_for_vip_clients as vip and CHAT_FRIEND_NUM_MESSAGES_TO_OTHER_USER_IN_TIME_WINDOW as cf_num_messages and STANDARD_NUM_MESSAGES_TO_OTHER_USER_IN_TIME_WINDOW as std_num_messages %}
-                vip_chat_friends {{ vip }} {{ free }} {{ cf_num_messages }} {{ std_num_messages }}{% endblocktrans %}</li>
+        <li>{% blocktrans with num_chat_friends_for_free_clients as free and  num_chat_friends_for_vip_clients as vip %}
+                vip_chat_friends {{ vip }} {{ free }}{% endblocktrans %}</li>
+        <li>{% blocktrans with CHAT_FRIEND_NUM_MESSAGES_TO_OTHER_USER_IN_TIME_WINDOW as cf_num_messages and STANDARD_NUM_MESSAGES_TO_OTHER_USER_IN_TIME_WINDOW as std_num_messages %}
+                vip_repeat_message_quota {{ cf_num_messages }} {{ std_num_messages }}{% endblocktrans %}</li>
         <li>{% blocktrans %}You can update your email address{% endblocktrans %}</li>
 
         </ul>
