--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -51,6 +51,7 @@
 
     {% else %}
         <link rel="stylesheet" href="/{{ live_static_dir }}/css/default_common.css">
+        <link rel="stylesheet" href="/{{ live_static_dir }}/css/default_menubar.css">
     {% endif %}
 
     <link rel="stylesheet" href="/{{ live_static_dir }}/css/jquery.fancybox-1.3.4.css">
