Fixed code to work with the Mature build.

--- a/rs/templates/login.html
+++ b/rs/templates/login.html
@@ -281,6 +281,10 @@
                     {%trans "lesbian dating" %}.
                 {% endif %}
 
+                {% if build_name == "Mature" %}
+                    {%trans "dating website to meet mature adults over 50 years old" %}.
+                {% endif %}
+
 
                 {% if not SITE_IS_TOTALLY_FREE %}
                     {% trans "Free" %} - {% trans "chat and messages included" %}<br><br>
