Minor fix to photo upload instructions

--- a/rs/templates/user_main_helpers/photos.html
+++ b/rs/templates/user_main_helpers/photos.html
@@ -166,7 +166,7 @@
             <li>
                 {% trans "Read - command verb" %}
                 <a href="{% url views.terms %}">{% trans "Terms and conditions" %}</a>
-                {% trans "for the rules of" %} {{ build_name }}.
+                {% trans "for the rules of" %} {{ app_name }}.
             <li>
                 {% trans "Photos that do not follow the rules will be erased without notification." %}
 
