--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -49,8 +49,14 @@
 
         {% if build_name == 'Discrete' or build_name == 'Lesbian' or build_name == 'Swinger' or build_name == 'Single' %}
             <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/Discrete_Menubar.css">
+
         {% else %}
-            <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/{{ build_name }}_Menubar.css">
+            {% if build_name == "Language" or build_name == "Mature" %}
+                <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/Language_Menubar.css">
+            {% else %}
+                <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/{{ build_name }}_Menubar.css">
+            {% endif %}
+        
         {% endif %}
         <link rel="stylesheet" href="/{{ live_proprietary_static_dir }}/css/{{ build_name }}_common.css">
 
