--- a/rs/static/css/site_common.css
+++ b/rs/static/css/site_common.css
@@ -430,3 +430,15 @@ li.cl-indent {
     white-space: pre-line;
     word-wrap: break-word;
 }
+
+.cl-login-fields-background td.cl-registration-big-prompt-td {
+	font-size: 18pt;
+	font-weight: bold;
+    text-align: center;
+}
+
+.cl-login-fields-background td.cl-registration-small-prompt-td
+{
+	font-size: 12pt;
+    text-align: center;
+}
