Fixed some minor build errors that were pulling in incorrect files for the time-stamped builds.

--- a/rs/templates/user_main_helpers/import_main_css_and_js.html
+++ b/rs/templates/user_main_helpers/import_main_css_and_js.html
@@ -40,8 +40,8 @@
 
     {% if not proprietary_static_dir_exists %}
         
-        <link rel="stylesheet" href="/{{ live_static_dir }}/css/default_common.css">
-        <link rel="stylesheet" href="/{{ live_static_dir }}/css/default_menubar.css">
+        <link rel="stylesheet" href="/{{ live_static_dir }}/css/default_build_common.css">
+        <link rel="stylesheet" href="/{{ live_static_dir }}/css/default_build_menubar.css">
 
     {% else %}
         
