Fixed css so that profile summaries will have spaces and <CR> removed.

--- a/rs/static/css/site_common.css
+++ b/rs/static/css/site_common.css
@@ -427,7 +427,7 @@ li.cl-indent {
 
 
 .cl-compressed-display-user-text {
-    white-space: pre-line;
+    white-space: normal;
     word-wrap: break-word;
 }
 
