--- a/rs/templates/advertising/horizontal_ad.html
+++ b/rs/templates/advertising/horizontal_ad.html
@@ -1,44 +1,20 @@
-{% if advertising_info.enable_ads %}
-<!--
-################################################################################
-# LexaLink Copyright information - do not remove this copyright notice
-# Copyright (C) 2012
-#
-# Lexalink - a free social network and dating platform for the Google App Engine.
-#
-# Original author: Alexander Marquardt
-# Documentation and additional information: http://www.LexaLink.com
-# Git source code repository: https://github.com/lexalink/LexaLink.git
-#
-# Please consider contributing your enhancements and modifications to the LexaLink community,
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-################################################################################
--->
 
-    <div class="cl-clear"></div>
-    <div id="id-horizontal-space-before-ad" class="grid_custom cl-grid_760px alpha omega cl-center-text cl-height_60px">
-        <br>
-    </div>
-    <div class="cl-clear"></div>
 
-    <div id="id-horizontal-ad" class="grid_custom cl-grid_760px alpha omega cl-center-text">
-        
+<div class="cl-clear"></div>
+<div class="grid_custom cl-grid_760px omega cl-center-text">
+    <br>
+</div>
+<div class="cl-clear"></div>
+
+<div class = "grid_custom cl-grid_760px alpha omega">
+    <div class=" cl-prefix_40px alpha omega cl-center-text">
+
     {% if advertising_info.bottom_ad_template %}
         {{ advertising_info.bottom_ad_template|safe }}
     {% endif %}
 
     </div>
-{% else %}
-<!-- ads are disabled for registration pages etc.. -->
-{% endif %}
+</div>
+<div class="grid_custom cl-grid_760px omega cl-center-text">
+    <br><br>
+</div>
