--- a/rs/templates/user_main_helpers/photo_rules.html
+++ b/rs/templates/user_main_helpers/photo_rules.html
@@ -5,7 +5,11 @@
 
 {% if ADULT_ORIENTED_SITE %}
 
-    <li>{% trans "No nude photos in public. Allowed in private." %}
+    {% if build_name == "swinger_build" or build_name == "gay_build" %}
+        <li>{% trans "No nude photos in public. Allowed in private." %}
+    {% else %}
+        <li>{% trans "No nude photos in public. Allowed in private. No genitals." %}
+    {% endif %}
 
 
 {% else %}
